@@ -16,6 +16,12 @@ The Gnome Display Manager is a re-implementation of the well known xdm
 program.  GDM 2.4 implements all significant features required for managing
 local and remote displays.
 
+Configuration Stability:
+
+The key/value pairs defined in the %{sysconfdir}/gdm/gdm.conf file is
+considered a "stable" interface and should only change in ways that are
+backwards compatible.
+
 gdm daemon:
 
  o X Authentication
