@@ -1,3 +1,10 @@
+2005-12-02  Brian Cameron  <brian.cameron@sun.com>
+
+	* README, daemon/gdm.h:  More clear stability
+	  information about the gdm.conf file.  Better
+	  comments for ADD_DYNAMIC_DISPLAY socket 
+	  command.
+
 2005-11-28  Brian Cameron  <brian.cameron@sun.com>
 
 	* Release 2.13.0.2: 
